Fixed wordbreak in calendar description

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -44,7 +44,6 @@
 }
 
 .cal-event-description {
-  word-break: break-all;
   white-space: normal;
   overflow: hidden;
   text-overflow: ellipsis;
